feat(ui): display version and changelog (ref #9)

--- a/assets/styles/app.scss
+++ b/assets/styles/app.scss
@@ -53,5 +53,9 @@ body {
         a {
             margin-right: 10px;
         }
+
+        .project-version {
+            float: right;
+        }
     }
 }
