--- a/templates/footer.html.twig
+++ b/templates/footer.html.twig
@@ -1,4 +1,5 @@
 {% set githubRepoLink = constant('App\\Constant\\UsefulLink::GITHUB_REPO') %}
+{% set githubChangelogLink = constant('App\\Constant\\UsefulLink::GITHUB_CHANGELOG') %}
 {% set linkedInProfileLink = constant('App\\Constant\\UsefulLink::LINKED_IN_PROFILE') %}
 {% set codingGameProfileLink = constant('App\\Constant\\UsefulLink::CODINGAME_PROFILE') %}
 
