feat(ui): add support me page (ref #11)

--- a/templates/footer.html.twig
+++ b/templates/footer.html.twig
@@ -6,6 +6,7 @@
 <a href="{{ githubRepoLink }}" target="_blank">GitHub</a>
 <a href="{{ linkedInProfileLink }}" target="_blank">LinkedIn</a>
 <a href="{{ codingGameProfileLink }}" target="_blank">CodinGame</a>
+<a href="{{ path('front_support_me') }}">Soutenir ce projet (Offrez-moi une bière)</a>
 
 <div class="project-version">
     <a href="{{ githubChangelogLink }}" target="_blank">
