--- a/templates/footer.html.twig
+++ b/templates/footer.html.twig
@@ -1,7 +1,16 @@
 {% set githubRepoLink = constant('App\\Constant\\UsefulLink::GITHUB_REPO') %}
+{% set githubChangelogLink = constant('App\\Constant\\UsefulLink::GITHUB_CHANGELOG') %}
 {% set linkedInProfileLink = constant('App\\Constant\\UsefulLink::LINKED_IN_PROFILE') %}
 {% set codingGameProfileLink = constant('App\\Constant\\UsefulLink::CODINGAME_PROFILE') %}
 
 <a href="{{ githubRepoLink }}" target="_blank">GitHub</a>
 <a href="{{ linkedInProfileLink }}" target="_blank">LinkedIn</a>
 <a href="{{ codingGameProfileLink }}" target="_blank">CodinGame</a>
+<a href="{{ path('front_support_me') }}">Soutenir ce projet (Offrez-moi une bière)</a>
+
+<div class="project-version">
+    <a href="{{ githubChangelogLink }}" target="_blank">
+        {# see config/packages/twig.yaml and src/Twig/FilePathExtension.php #}
+        {{ versionFilePath|content }}
+    </a>
+</div>
